# ribotricer

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SRP098789-human.ipynb  TODO.md  deploy_docs.sh  doc_requirements.txt  pyproject.toml  requirements.txt  requirements_dev.txt  run_test.sh  run_test_R64.sh  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml  pythonpackage.yml
RiboCop/: __init__.py  bam.py  cli.py  coherence.py  common.py  const.py  constants.py  count.py  count_orfs.py  detect_orfs.py  download.py  fasta.py  genome.py  gtf.py  infer_protocol.py  interval.py  length.py  metagene.py  orf.py  parallel.py  plotting.py  prepare_orfs.py  statistics.py  test_func.py  utils.py  wig.py
annotation/: README.rst
annotation/hg38/: hg38.gencode.v25.UTR3.bed  hg38.gencode.v25.UTR5.bed
annotation/mm10/: mm10.gencode.vM11.UTR3.bed  mm10.gencode.vM11.UTR5.bed
annotation/notebooks/: gencode-regions-mouse.ipynb
docs/: Makefile  api-usage.rst  cmd-manual.rst  conf.py  example_workflow.rst  index.rst  installation.rst  introduction.rst  make.bat  modules.rst  quickstart.rst  ribocop.rst  riboraptor.periodicity.rst  riboraptor.rst  riboraptor.utils.rst  scores.rst  usage.rst
notebooks/: KStest.ipynb  Plotting_ribotricer_profile.ipynb  Ribo-Seq periodicity.ipynb  Test riboraptor.ipynb
notebooks/.ipynb_checkpoints/: KStest-checkpoint.ipynb
pipeline/: cluster.yaml  jobscript.sh  submitall.sh
ribocop/: __init__.py  cli.py  count.py
riboraptor/: __init__.py  cli.py  coherence.py  count.py  count_utilities.py  customutils.py  download.py  dtw.py  fasta.py  genome.py  gtfutils.py  helpers.py  infer_protocol.py  interval.py  normalization.py  orf.py  plotting.py  riboraptor.py  sequence.py  statistics.py  utils.py  wig.py
riboraptor/annotation/notebooks/: gencode-regions-human.ipynb  gencode-regions-mouse.ipynb
riboraptor/periodicity/: __init__.py  coherence.py
riboraptor/utils/: __init__.py  bed.py  count.py  gtfutils.py  helpers.py  wig.py
ribotricer/: __init__.py  bam.py  cli.py  common.py  const.py  count_orfs.py  detect_orfs.py  fasta.py  gtf.py  infer_protocol.py  interval.py  intervalTree.py  learn_cutoff.py  metagene.py  orf.py  orf_seq.py  plotting.py  prepare_orfs.py  statistics.py  utils.py
scripts/: convert_gse_to_srp  download_sra_data  download_sra_data.R  merge_read_counts.py
snakemake/: Snakefile  cluster.yaml  jobscript.sh  snakefile  submitall.dryrun  submitall.sh
snakemake/configs/: SRP000637.py.sample  template.py  template.py.sample
tests/: __init__.py  commands.txt  conftest.py  test_helpers.py  test_inferprotocol.py  test_interval.py  test_orf.py  test_ribocop.py  test_riboraptor.py
tests/data/: SRX2536403_subsampled.unique.bigWig  SRX2536403_subsampled.unique.gene_coverage_CDS.tsv.REMOVED.git-id  SRX2536403_subsampled.unique.gene_coverage_UTR3.tsv.REMOVED.git-id  SRX2536403_subsampled.unique.metagene_counts.tsv  SRX2536403_subsampled.unique.read_length_dist.tsv  hg38.fa  hg38_v24_refseq.bed12
utils/: jupyterscript.job  jupyterscript.sh
